# proj_embarcados

./: .gitignore  CMakeLists.txt  LICENSE  README.md  prj.conf
boards/arm/: stm32f429i_disc1.overlay
includes/: shared_conf.h  terminal.h
src/: display_task.c  embarcados.code-workspace  logic_task.c  main.c  shared_conf.h  terminal.c
